--- a/package.json
+++ b/package.json
@@ -11,31 +11,36 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.11",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/redux-persist": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
