--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imagine-redux-story",
+  "name": "e-commerce-health-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,12 +12,13 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-toast": "^1.2.14",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/redux-persist": "^4.3.1",
     "class-variance-authority": "^0.7.1",
@@ -32,7 +33,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.56.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
