--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/redux-persist": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
@@ -37,14 +39,17 @@
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-modern-drawer": "^1.4.0",
     "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
-    "recharts": "^3.1.2",
+    "recharts": "^2.15.4",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.4",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -54,6 +59,7 @@
     "@types/react": "^18.3.12",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.3.1",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
