created commercial page

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/redux-persist": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
     "jwt-decode": "^4.0.0",
