--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.9.2",
+    "gsap": "^3.14.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
